--- a/templates/city_list.html
+++ b/templates/city_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "KR">
+<html lang = "kr">
 <head>
     <meta charset="UTF-8">
     <title>City - timezone</title>
@@ -8,13 +8,46 @@
         <script>
             var xhr;
 
-            // Ajax로 등록
+            // AJAX로 등록
+            function postCity() {
+                var cname = document.getElementById('name_').value;                                                             //name_ 값을 받아와 cname에 저장
+                var ctimezone = document.getElementById('timezone_').value;                                                     //timezone_ 값을 받아와 ctimezone_에 저장
 
+                var data = {name: cname, timezone: ctimezone}                                                                   // 데이터를 딕셔너리 형태로 입력
+                var datastr = JSON.stringify(data);                                                                             // JSON 형식으로 data를 변환
+            
+
+                xhr = new XMLHttpRequest();                                                                                     // request 요청을 쉽게 할 수 있도록 객체 생성 (편지 준비)(AJAX 요청)
+                xhr.onreadystatechange = function() {                                                                           // XMLHttpRequest 객체의 상태가 변경될 때마다 호출되는 이벤트 핸들러
+                    if (xhr.readyState == 4) {                                                                                  // 사용자가 응답을 처리할 수 있는 상태일 때,
+                        var data = xhr.responseText;                                                                            // responseText: 서버로부터 받은 응답의 내용 (텍스트 형식)
+                        var obj = JSON.parse(data);                                                                             // responseText를 data변수에 저장(JSON 파일), 그리고 JavaScript 객체로 변환
+
+                        var node = document.createElement("DIV");
+                        var textnode = document.createTextNode(obj.name + "-" + obj.timezone + " added...")                     // 새로운 텍스트를 가진 Textnode를 생성, textnode변수에 저장, 후에 특정 요소에 추가 가능
+                        node.appendChild(textnode);                                                                             // div 태구에 textnode를 추가(텍스트 추가)
+                        document.getElementById("citytable").appendChild(node);                                                 // citytalbe이란 id를 가진 태그에 node를 추가(div 태그 추가)
+
+                    }
+                };
+                xhr.open("POST", "/cities");                                                                                    // /cities 엔드포인트에 POST 명령 준비 (편지 작성)
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);                                                                 // X-CSRFToken에 csrftoken 값을 설정, CSRF 공격에 대한 예방
+                xhr.send(datastr);                                                                                              // datastr 데이터 보내기 (편지 전송)
+            }
         </script>
 
 </head>
 <body>
+    <div style="padding: 10px;">
+        <a href="/">HOME</a>
+    </div>
 
+    <h1 style="padding: 10px;">City list</h1>
+    <div style="margin: 20px 0">
+        <input type="text" id="name_" value="도시명">
+        <input type="text" id="timezone_" value="=Asia/Seoul">
+        <button onclick="postCity()">등록</button>
+    </div>
     
 </body>
 </html>
