--- a/templates/city_list.html
+++ b/templates/city_list.html
@@ -25,7 +25,7 @@
 
                         var node = document.createElement("DIV");
                         var textnode = document.createTextNode(obj.name + "-" + obj.timezone + " added...")                     // 새로운 텍스트를 가진 Textnode를 생성, textnode변수에 저장, 후에 특정 요소에 추가 가능
-                        node.appendChild(textnode);                                                                             // div 태구에 textnode를 추가(텍스트 추가)
+                        node.appendChild(textnode);                                                                             // div 태그에 textnode를 추가(텍스트 추가)
                         document.getElementById("citytable").appendChild(node);                                                 // citytalbe이란 id를 가진 태그에 node를 추가(div 태그 추가)
 
                     }
