--- a/templates/city_list.html
+++ b/templates/city_list.html
@@ -34,6 +34,60 @@
                 xhr.setRequestHeader("X-CSRFToken", csrftoken);                                                                 // X-CSRFToken에 csrftoken 값을 설정, CSRF 공격에 대한 예방
                 xhr.send(datastr);                                                                                              // datastr 데이터 보내기 (편지 전송)
             }
+            
+            // AJAX로 수정
+            function putCity(elem) {
+                var cityid = parseInt(elem.getAttribute('cityid'));                                                             // elem의 cityid라는 속성을 가져와(지정된 요소의 속성 값 반환) 인트로 바꾸고 cityid라는 변수에 대입
+                var cname = document.getElementById('name_'+cityid).value;
+                var ctimezone = document.getElementById('timezone_'+cityid).value;
+
+                var data = {id: cityid, name: cname, timezone: ctimezone}
+                var datastr = JSON.stringify(data);
+
+                xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState == 4) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
+                        alert(obj.name + " modified...");
+                        document.getElementById('name_'+cityid).style.color = "#FF6600";                                        // 바뀐 부분의 색깔 바꾸기 (cityid는 바뀐 부분만 받아왔으므로)
+                        document.getElementById('timezone_'+cityid).style.color = "#FF6600";                                    // 바뀐 부분의 색깔 바꾸기 (cityid는 바뀐 부분만 받아왔으므로)
+                    }   
+                };
+                xhr.open("PUT", "/cities");
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                xhr.send(datastr);
+            }
+
+            // AJAX로 삭제
+            function deleteCity(cityid) {
+                if (confirm("삭제 하시겠습니까?") == false){
+                    return false;
+                }
+                
+                var strurl = "/cities/" + cityid;
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState == 4) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
+
+                        document.getElementById('citybox_'+cityid).remove();                                                    // 삭제
+                    }
+                };
+                xhr.open("DELETE", strurl);
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                xhr.send(null);
+            }
+        
+        
+        
+        
+        
+        
+        
+        
+        
         </script>
 
 </head>
@@ -47,6 +101,28 @@
         <input type="text" id="name_" value="도시명">
         <input type="text" id="timezone_" value="=Asia/Seoul">
         <button onclick="postCity()">등록</button>
+    </div>
+
+    <div id="citytable">
+        <table width="100%" border="1" cellpadding="0" cellspacing="0">
+            {% if rsCity %}
+                {% for city in rsCity %}
+                <tr style="padding:10px; height: 45px;" id="citybox_{{city.id}}">
+                    <td align="center">{{city.id}}</td>
+                    <td align="center"><input type="text" id="name_{{city.id}}" value="{{city.name}}"></td>
+                    <td align="center"><input type="text" id="timezone_{{city.id}}" value="{{city.timezone}}"></td>
+                    <td align="center">{{city.current_time}}</td>
+                    <td align="center"><button cityid="{{city.id}}" onclick="putCity(this)">수정</button></td>
+                    <td align="center"><button onclick="deleteCity({{city.id}})">삭제</button></td>                                                 <!--이거 왜 안됨???????-->
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr style="padding: 10px; border-top:solid 1px #3388cc";>
+                    <td>
+                        No city list...
+                    </td>
+                </tr>
+        </table>
     </div>
     
 </body>
