prac-XMLHttpRequest complete

--- a/templates/city_detail.html
+++ b/templates/city_detail.html
@@ -11,7 +11,7 @@
         <a href="/cities">LIST</a>
     </div>
 
-    <h1 style="padding: 10px"><b>{{name}}</b >시</h1>
+    <h1 style="padding: 10px"><b>{{name}}</b >시</h1>                       <!--서버에서 받아온 변수를 템플릿 안에서 사용 시 '{{변수}}' 로 사용-->
     
     <div style = "padding: 10px">
         <span>Time zone</span> :
